<resources>
    <string name="login_this_new">当前为体验账号，点击登录查车账号</string>
    <string name="register">注册</string>
    <string name="time_diff">未知</string>
    <string name="baidu_navi_sure">确认</string>
    <string name="car_state_latlng">经纬度无效</string>
    <string name="device_panorama_distance">(%1$dM)</string>
    <string name="update_all">全部更新</string>
    <string name="dialog_title">温馨提示</string>
    <string name="dialog_msg">地图切换后软件将自动重启</string>
    <string name="dialog_ok">确定</string>
    <string name="login_ok">知道了</string>
    <string name="new_user_reminder">已购买单台定位器，登录账号为设备IMEI，密码即IMEI后六位数字。\n已购买多台定位器，请联系卖家索取登录账号和密码。</string>
    <string name="forget_passward">如忘记密码，请联系商家索取重置密码。重置后密码默认为：123456</string>
    <string name="register_message1">万物在线是全球最大的GPS查车平台及爱车交流社区。在指定经销商处购买我们的产品，即可成为正式用户。您也可以做为体验用户，体验万物在线的查车及社区功能。</string>
    <string name="register_message2">·24小时实时监控定位查车\n·车辆定位导航\n·街景地图及实时路况展示\n·安全电子围栏设置\n·车辆多种类报警\n·180天行车轨迹回放</string>
    <string name="register_message3_t1">300万日活跃</string>
    <string name="register_message3_t2">2000万车辆</string>
    <string name="register_message3_t3">136个国家和地区</string>
    <string name="cacu_distance">计算距离中 &#8230;</string>
    <string name="update_notify">发现新版本，点击查看详情</string>
    <string name="search_key">请输入名称或IMEI号</string>
    <string name="app_name">万物在线 </string>
    <string name="skip">跳过 %1$d</string>
    <string name="track">追踪</string>
    <string name="histroy">历史回放</string>
    <string name="cancel">取消</string>
    <string name="no">取消</string>
    <string name="done">确定</string>
    <string name="ok">确定</string>
    <string name="login_pwd_ok">现在修改</string>
    <string name="car_list">车辆列表</string>
    <string name="current_account">当前账号:</string>
    <string name="network_error">网络连接不可用，请检查网络设置后重试！</string>
    <string name="the_first">已是第一个！</string>
    <string name="the_last">已是最后一个！</string>
    <string name="request_fail">查询失败</string>
    <string name="request_set_fail">操作失败</string>
    <string name="update_fail">修改设备信息失败</string>
    <string name="update_ok">修改设备信息成功</string>
    <string name="car_state_stop">静止</string>
    <string name="car_state_stop2">静止</string>
    <string name="car_state_offline">离线</string>
    <string name="car_state_offline2">离线</string>
    <string name="car_state_runing">移动</string>
    <string name="car_state_runing2">移动</string>
    <string name="car_state_disable">未用</string>
    <string name="car_state_disable2">未用</string>
    <string name="car_state_expire">过期</string>
    <string name="car_state_expire2">过期</string>
    <string name="state">状态:</string>
    <string name="welcome">欢迎使用万物在线！</string>
    <string name="login_tips">您尚未登录，请点击登录。</string>
    <string name="search">搜索</string>
    <string name="logining">登录中 &#8230;</string>
    <string name="no_data">没有数据!</string>
    <string name="much_devices">设备太多(超过200)，建议使用APP查看！</string>
    <string name="invalid_devices">无效设备！</string>
    <string name="address">位置:</string>
    <string name="speed">速度:</string>
    <string name="reverse">获取中 &#8230;</string>
    <string name="not_positioned">未定位</string>
    <string name="setting">设置</string>
    <string name="about">关于</string>
    <string name="panorama">街景</string>
    <string name="offline_baidu_map">离线百度地图</string>
    <string name="loading">正在查询 &#8230;</string>
    <string name="updateing">正在修改 &#8230;</string>
    <string name="locating">正在定位 &#8230;</string>
    <string name="loading_set_fence">正在设置电子围栏 &#8230;</string>
    <string name="loading_set_fence_my">加载数据中 &#8230;</string>
    <string name="no_panorama_data">抱歉，未能检索到街景数据。</string>
    <string name="login">登录</string>
    <string name="preference_title_monitor_interval">监控刷新间隔</string>
    <string name="default_preference_summary_monitor_interval">10秒</string>
    <string name="preference_title_track_interval">追踪刷新间隔</string>
    <string name="default_preference_summary_track_interval">10秒</string>
    <string name="preference_title_track_interval_speed">设置历史回放播放速度</string>
    <string name="preference_title_history_interval">停留标示</string>
    <string name="default_preference_summary_history_interval">10分钟</string>
    <string name="preference_interest_point">最多可选择3个兴趣点</string>
    <string name="preference_title_efence_radius">默认围栏半径</string>
    <string name="default_preference_summary_efence_radius">200米</string>
    <string name="notice_efence_radius">围栏半径取值范围为200到5000</string>
    <string name="overspeed_setting">超速设置</string>
    <string name="overspeed_max">限速(km/h)：</string>
    <string name="version">软件版本</string>
    <string name="website">官方网站</string>
    <string name="search_car_by_wechat">官方微信</string>
    <string name="website_address">http://www.gpsoo.net</string>
    <string name="distribute_date">发布时间</string>
    <string name="device_name">设备名称</string>
    <string name="device_number">车牌号</string>
    <string name="device_imei">IMEI</string>
    <string name="device_is_expire">设备已过期</string>
    <string name="device_is_expire_detail">过期是因为平台使用期限到了，该向服务商缴纳平台使用费了，服务商联系方式：</string>
    <string name="device_is_disable">设备未启用</string>
    <string name="error_no_market">您的手机没有安装应用商店</string>
    <string name="default_group">默认组</string>
    <string name="account_not_null">用户名不能为空</string>
    <string name="password_not_null">密码不能为空</string>
    <string name="no_history">无历史记录</string>
    <string name="sdcard_not_exist">SD卡不存在，您无法安装离线地图</string>
    <string name="status_wait_for_download">(等待中)</string>
    <string name="status_downloading">(下载中)</string>
    <string name="status_unzip">(解压中)</string>
    <string name="status_downloaded">(完成)</string>
    <string name="status_pause">(暂停)</string>
    <string name="status_update">(有更新)</string>
    <string name="choose_time_interval">请选择回放时段</string>
    <string name="title_start_date">开始日期：</string>
    <string name="title_end_date">结束日期：</string>
    <string name="filter_lbs_points">过滤LBS点</string>
    <string name="choose_start_date">请选择开始日期</string>
    <string name="choose_end_date">请选择结束日期</string>
    <string name="choose_time_period">请选择时间段</string>
    <string name="choose_date_tip">开始日期应小于结束日期</string>
    <string name="across_days_tip">一次性查询最多回放%1$d天的轨迹，请重新选择。我们为您保留最近%2$d个月轨迹数据</string>
    <string name="save_data_days_tip">您选择的开始时间距离现在超过%1$s天，请重新选择（小于%2$s天）</string>
    <string name="label_time_my">时间:</string>
    <string name="offline_map_download_finished">离线地图下载完成</string>
    <string name="download_finish">下载完成</string>
    <string name="download_status">正在下载%1$s(未下载%2$d个)</string>
    <string name="preference_title_map">使用地图</string>
    <string name="default_preference_summary_map">百度地图</string>
    <string name="preference_title_interest">兴趣点</string>
    <string name="search_all">包含下级</string>
    <string name="auto_login">自动登录</string>
    <string name="label_speed">速度: </string>
    <string name="label_mileage">里程: </string>
    <string name="east">东</string>
    <string name="north">北</string>
    <string name="south">南</string>
    <string name="west">西</string>
    <string name="east_north">东北</string>
    <string name="east_south">东南</string>
    <string name="west_north">西北</string>
    <string name="west_south">西南</string>
    <string name="new_version_text">%1$s(最新)</string>
    <string name="download_new_version_text">下载</string>
    <string name="offline_map_start">开始下载</string>
    <string name="offline_map_update">下载更新</string>
    <string name="offline_map_delete">删除</string>
    <string name="offline_map_pause">暂停下载</string>
    <string name="sp_name">服务商名称</string>
    <string name="sp_contact">联系人</string>
    <string name="sp_addr">地  址</string>
    <string name="sp_phone">电  话</string>
    <string name="hot_cities">热门城市</string>
    <string name="all_cities">全国</string>
    <string name="download_manage">下载管理</string>
    <string name="city_list">城市列表</string>
    <string name="fence">电子围栏</string>
    <string name="device_type">设备类型</string>
    <string name="phone">设备卡号:</string>
    <string name="last_connection">最后通讯时间</string>
    <string name="last_gps">最后定位时间</string>
    <string name="phone_card_num_tel">设备电话号</string>
    <string name="phone_card_num_iot">物联卡号码</string>
    <string name="default_efence_radius">半径:</string>
    <string name="open_date">开通时间</string>
    <string name="end_date">到期时间</string>
    <string name="card_end_date">卡到期时间</string>
    <string name="expiry_date">%1$s到期  %2$s</string>
    <string name="imei_copy_hint">已复制到粘贴板</string>
    <string name="address_copy_hint">地址已复制到粘贴板</string>
    <string name="acc">发动机: </string>
    <string name="addr">地址: </string>
    <string name="location_type">定位: </string>
    <string name="power">电量 %1$s</string>
    <string name="acc_open">开启</string>
    <string name="acc_close">熄火</string>
    <string name="distance">距离:</string>
    <string name="modify_pwd">修改密码</string>
    <string name="old_pwd">请输入旧密码</string>
    <string name="new_pwd">请输入新密码</string>
    <string name="pwd_low">密码不能少于两个字符</string>
    <string name="new_pwd2">请再次输入新密码</string>
    <string name="pwd_different">两次新密码输入不一致</string>
    <string name="pwd_same">新密码和旧密码相同，请再次输入密码</string>
    <string name="msg_modify_pwd_success">密码修改成功</string>
    <string name="alarm">报警信息</string>
    <string name="token_expiry">登录失败，请重新登录</string>
    <string name="no_alarm">没有报警信息</string>
    <string name="offline_update">您有新的地图更新</string>
    <string name="refresh_success">刷新成功</string>
    <string name="add_fence_success">设置电子围栏成功</string>
    <string name="delete_fence_success">关闭电子围栏成功</string>
    <string name="switch_fence_on_toast">启用电子围栏</string>
    <string name="switch_fence_off_toast">关闭电子围栏</string>
    <string name="set_fence">设置围栏</string>
    <string name="reset_fence">重置围栏</string>
    <string name="set_fence_mess">拖动地图调整围栏中心，拖动进度条控制围栏范围大小</string>
    <string name="set_polygon_fence_tip">点击地图构建多边形，长按图标修改多边形</string>
    <string name="exit_app">再按一次退出万物在线</string>
    <string name="device_command">下发指令</string>
    <string name="no_command">该设备没有下发指令</string>
    <string name="sos_settings_add">SOS号码设置</string>
    <string name="sos_settings_del">SOS号码删除</string>
    <string name="phone_1">号码1:</string>
    <string name="phone_2">号码2:</string>
    <string name="phone_3">号码3:</string>
    <string name="check_pwd">密码:</string>
    <string name="check_hint">发指令前请再次确认账号的密码</string>
    <string name="pwd_not_correct">密码不正确</string>
    <string name="stay_point">停留点: </string>
    <string name="start_time">开始时间: </string>
    <string name="end_time">结束时间: </string>
    <string name="stay_time">停留时长: </string>
    <string name="ensure_read_dialog">确认删除%1$d项报警消息吗?</string>
    <string name="cancle_read">取消</string>
    <string name="ensure_read">删除</string>
    <string name="choose_notification_sound">通知音</string>
    <string name="choose_ring_sound">铃声</string>
    <string name="choose_custom_sound">自定义</string>
    <string name="choose_custom_sound_tip">可以在sd卡的CarOnlineSound文件夹里放入自定义声音, 支持的文件格式包括.wav/.ogg/.mp3/.mid/.3gp/.mp4/.m4a</string>
    <string name="bindphone_next">下一步</string>
    <string name="bindphone_smscode_title">输入验证码</string>
    <string name="withdraw_deposit_money">提现金额</string>
    <string name="withdraw_success_tip">资金会在1～3个工作日发红包到微信</string>
    <string name="withdraw_deposit_deadline">预计1~3个工作日内到账</string>
    <string name="withdraw_requested">我知道了</string>
    <string name="wallet_withdraw_balance_requested">提现申请已经提交</string>
    <string name="withdraw_success_bank">提现银行卡</string>
    <string name="register_new">新用户注册</string>
    <string name="register_phone_hint">输入手机号（作为登录账号）</string>
    <string name="register_get_captcha">获取验证码</string>
    <string name="register_set_pwd">设置密码</string>
    <string name="register_set_pwd_hint">设置密码6&#8211;20位</string>
    <string name="register_confirm_pwd_hint">确认密码</string>
    <string name="register_device_nick_hint">输入账号昵称（选填）</string>
</resources>