<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingLeft="@dimen/space"
    android:paddingRight="@dimen/space_4x"
    >

    <ImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/space"
        android:layout_marginTop="@dimen/space_3x"
        android:padding="@dimen/space"
        android:src="@drawable/actionbar_close_black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/space_3x"
        android:layout_marginTop="116dp"
        android:text="@string/register_set_pwd"
        android:textColor="@color/black_bg"
        android:textSize="@dimen/titletext_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/space_3x"
        android:layout_marginTop="@dimen/space_7x"
        android:hint="@string/register_set_pwd_hint"
        android:textSize="@dimen/textsize"
        android:inputType="textPassword"
        android:background="@drawable/edittext_bg_line"
        android:paddingBottom="@dimen/space_2x"
        android:paddingTop="@dimen/space_2x"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        />

    <EditText
        android:id="@+id/confirmPwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/space_3x"
        android:layout_marginTop="@dimen/space_5x"
        android:hint="@string/register_confirm_pwd_hint"
        android:textSize="@dimen/textsize"
        android:inputType="textPassword"
        android:background="@drawable/edittext_bg_line"
        android:paddingBottom="@dimen/space_2x"
        android:paddingTop="@dimen/space_2x"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password"
        />

    <EditText
        android:id="@+id/deviceNick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/space_3x"
        android:layout_marginTop="@dimen/space_5x"
        android:hint="@string/register_device_nick_hint"
        android:textSize="@dimen/textsize"
        android:background="@drawable/edittext_bg_line"
        android:paddingBottom="@dimen/space_2x"
        android:paddingTop="@dimen/space_2x"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirmPwd"
        />

    <TextView
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/space_3x"
        android:layout_marginTop="@dimen/space_7x"
        android:background="@drawable/login_btn_enable"
        android:gravity="center"
        android:paddingBottom="11dp"
        android:paddingTop="11dp"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="@dimen/textsize"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/deviceNick"
        />

</android.support.constraint.ConstraintLayout>