<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearlayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/icons_txtbg_tr"
    android:orientation="vertical">
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dip"
        android:gravity="center_vertical"
        android:orientation="horizontal" 
        android:layout_marginBottom="6dip"
         android:layout_marginLeft="10dip">
   
        <TextView
        android:id="@+id/pop_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stay_point"
        android:textColor="@color/popup_tv"
        android:textSize="14sp" />
        
        
        <TextView
        android:id="@+id/pop_name_position"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dip"
        android:textColor="@color/popup_tv" 
        android:textSize="14sp" />        
    </LinearLayout>

    <View  
        android:id="@+id/line_show1"
        android:layout_width="fill_parent"
        android:layout_height="0.5dip"
        android:background="@color/line_show_thf" 
        android:visibility="visible"/>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dip"
        android:gravity="center_vertical"
        android:orientation="horizontal" 
         android:layout_marginLeft="10dip">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_time"
            android:textColor="@color/popup_tv"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/pop_start_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dip"
            android:textColor="@color/popup_tv"
            android:textSize="13sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/acc_ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dip"
        android:gravity="center_vertical"
        android:orientation="horizontal" 
         android:layout_marginLeft="10dip">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_time"
            android:textColor="@color/popup_tv"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/pop_end_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dip"
            android:textColor="@color/popup_tv"
            android:textSize="13sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dip"
        android:orientation="horizontal" 
         android:layout_marginLeft="10dip">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stay_time"
            android:textColor="@color/popup_tv"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/pop_total_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dip"
            android:textColor="@color/popup_tv"
            android:layout_gravity="center_vertical"
            android:textSize="13sp" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dip"
        android:orientation="horizontal" 
         android:layout_marginLeft="10dip"
         android:layout_marginBottom="8dip">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textColor="@color/popup_tv"           
            android:textSize="13sp" />

        <TextView
            android:id="@+id/pop_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dip"
            android:ellipsize="end"
            android:maxLines="3"
            android:maxWidth="200dip"
            android:minWidth="200dip"
            android:textColor="@color/popup_tv"
            android:layout_gravity="center_vertical"
            android:textSize="13sp"
            android:text="@string/reverse" />
    </LinearLayout>

</LinearLayout>